# ClearWay

./: .gitignore  .gitlab-ci.yml  LICENSE.md  Makefile  README.md  clearway.toml  pyproject.toml  requirements.txt  setup.cfg
.githooks/: prepare-commit-msg
clearway/: __init__.py  __main__.py  cli.py
clearway/ai/: __init__.py  ai.py
clearway/cli/: __init__.py
clearway/config/: __init__.py
clearway/gpio/: __init__.py  servo.py  stateMachinePanel.py
documents/: README.md
documents/base/: frontPage.sty  parameter.sty
documents/explo/AIComparator/: README.md  openCV.py  requirements.txt
documents/explo/BicycleDetector/: README.md  bicycle_detector.py
documents/installationGuide/: GuideInstallationClearWay.tex  biblio.bib  glossary-ignored.tex  glossary.tex  installation.tex  latexmkrc  utilisation.tex  versionningTable.tex
documents/research/: HWInference.tex  Recherche.tex  biblio.bib  camera.tex  centralise-décentralise.tex  centraliseDecentralise.tex  communicationProtocol.tex  comparaisonIA.tex  glossary-ignored.tex  glossary.tex  latexmkrc  reglementation.tex  versionningTable.tex
explo/AIComparator/: comparator.py  imageAI.py
explo/BicycleDetector/: Makefile  README.md
explo/ServoMotor/: servo-with-angle.py
explo/imageRecorder/: imageRecorder.py  rapidRecorder.py
production/: pyproject.toml  requirements.txt  setup.cfg
production/clearway/: __main__.py  cli.py
production/clearway/gpio/: stateMachinePanel.py
production/src/: main.py  pilotLED.py
tests/: __init__.py
tests/ai/: __init__.py  test_ai.py
tests/config/: __init__.py  test_config.py
tests/config/toml_files/: multiple_sections.toml  no_section.toml  nominal.toml  wrong_key.toml  wrong_value_gpio_A.toml  wrong_value_gpio_B.toml  wrong_value_gpio_C.toml  wrong_value_gpio_D.toml  wrong_value_gpio_E.toml
tests/gpio/: __init__.py  test_servo.py  test_stateMachinePanel.py
