# see https://setuptools.pypa.io/en/latest/index.html

[metadata]
name = clearway
version = attr: clearway.__version__
author = CHAUVIN Léo, FRISSANT Damien and GAUTIER Pierre-Louis
description = The main purpose of the project is to avoid incidents and crashes between cyclists and motorists
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENCE.md
platform = any
keywords = ["openCV", "python", "python38"]
classifiers =
    Development Status :: Work in Progress
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8

############################################# Options #############################################

[options]
python_requires = ==3.8.*
packages = find:
test_suite = tests
install_requires =
    transitions == 0.8.10

[options.packages.find]
where = clearway
include =
    clearway
    clearway/gpio
exclude =
    tests
    docs

############################################## Linter #############################################

# Flake8 is a wrapper around these tools: PyFlakes, pycodestyle and Ned Batchelder's McCabe script, see https://github.com/PyCQA/flake8
[flake8]
doctests = True
count = True
statistics = True
exclude =
    .git,
    .githooks/*,
    __pycache__,
    documents/*,
    .env/*
max-complexity = 10
max-line-length = 120
docstring-convention = numpy
import-order-style = pep8
extend-select  = B,B9,I,N,S
    # Extend the list of error codes reported by Flake8
    # B like bugbear, the flake8-bugbear plugin helps you find various bugs and design problems, see https://github.com/PyCQA/flake8-bugbear
    # B9 for more bugbear opinionated warnings, which are disabled by default.
    # I like import : flake8-import-order plugin checks that import statements are grouped and ordered, see https://github.com/PyCQA/flake8-import-order
    # N like naming : pep8-naming plugin check your code against PEP 8 naming conventions., see https://github.com/PyCQA/pep8-naming and https://www.python.org/dev/peps/pep-0008
    # S like security : flake8-bandit plugin is a automated security testing built, see https://github.com/tylerwince/flake8-bandit

############################################# Formater ############################################

# Use of black, but this tool don't use setup.cfg, it uses pyproject.toml, see https://github.com/psf/black/issues/65
